<resources>
    <string name="app_name">My Calculator</string>
    <string name="textview">TextView</string>
    <string name="u2212">-</string>
    <string name="u00d7">×</string>
    <string name="u00f7">÷</string>
    <string name="division">%</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="clear">c</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string name="bracket">()</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
</resources>