<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3E3C3C"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <Button
            android:id="@+id/button9"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/teal_200"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/teal_200"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="2"
            android:layout_column="2"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="2"
            android:layout_column="1"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="2"
            android:layout_column="0"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="3"
            android:layout_column="2"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="3"
            android:layout_column="1"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:id="@+id/buttondivision"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/u00f7"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="1"
            android:layout_column="3"/>

        <Button
            android:id="@+id/buttonmultiplication"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/u00d7"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="4"
            android:layout_column="3"/>

        <Button
            android:id="@+id/buttonsubtraction"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/u2212"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="2"
            android:layout_column="3"/>
        <Button
            android:id="@+id/buttonaddition"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/add"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_column="3"/>

        <Button
            android:id="@+id/buttonmodulus"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/division"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/buttonequal"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/equal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="4"
            android:layout_column="2"/>

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/clear"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/buttondecimalpt"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/dot"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="4"
            android:layout_column="0"/>

        <Button
            android:id="@+id/buttonbracket"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:text="@string/bracket"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_column="1"/>

        <ImageButton
            android:id="@+id/buttonback"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:background="@color/teal_200"
            android:src="@drawable/back"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_row="3"
            android:layout_column="3"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button0"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@color/teal_200"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />


    </GridLayout>
</RelativeLayout>
